z-index bug

--- a/plugin/style.css
+++ b/plugin/style.css
@@ -243,7 +243,7 @@ background-position:0 0, -1px -5px;}
 #okcp .okcp-img-grid #page .match_row_screenname {display:none;position:absolute;top:159px;left:0;z-index:20;padding:4px 0 6px;width:185px;text-align:center;background-color: rgba(255,255,255,0.7);text-shadow:1px 1px 2px white;}
 #okcp .okcp-img-grid #page .essay {display:none;}
 #okcp .okcp-img-grid #page .percentages {display:none;position:static;margin-top:185px;top:auto;bottom:25px;left:0px;z-index:20;width:auto;padding:4px;}
-#okcp .okcp-img-grid #page .percentages .match {position:absolute;top:0;left:0;z-index:1000;}
+#okcp .okcp-img-grid #page .percentages .match {position:absolute;top:0;left:0;z-index:15;}
 #okcp .okcp-img-grid #page .percentages .match {font-size:0;}
 #okcp .okcp-img-grid #page .percentages .match .percentage {font-size:16px;background-color: rgba(150,150,150,0.6);border-bottom-right-radius: 5px;padding:4px;text-shadow: 0px 0px 3px rgba(0,0,0,0.8), 1px 1px 3px rgba(0,0,0,0.6);color:rgb(255, 113, 178);}
 #okcp .okcp-img-grid #page .percentages p {display:inline-block;padding:0;font-size:12px;}
